--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         }
     ],
     "require": {
-        "php": "^8.0"
+        "php": "^8.0",
+        "psr/http-message": "^1.0"
     },
     "autoload": {
         "psr-4": {
