Added response - json, and server request - header, server, isMethod, url, cookie, isAjax, isPath, raw, get, post, input, isEmpty, rawResponse, file, files

--- a/composer.json
+++ b/composer.json
@@ -17,5 +17,8 @@
         "psr-4": {
             "PCore\\HttpMessage\\": "src/"
         }
+    },
+    "suggest": {
+        "pcore/utils": "Требуется utils."
     }
 }
