Added work with session, CSRFToken and Cookies use separate bags

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     ],
     "require": {
         "php": "^8.0",
-        "psr/http-message": "^1.0"
+        "psr/http-message": "^1.0",
+        "pcore/session": "dev-dev"
     },
     "autoload": {
         "psr-4": {
