--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "require": {
         "php": "^8.0",
         "psr/http-message": "^1.0",
-        "pcore/session": "dev-main"
+        "pcore/session": "1.0.*"
     },
     "autoload": {
         "psr-4": {
